Update AKS attestation example to work with Gramine v1.2
Signed-off-by: aneessahib <anees.a.sahib@intel.com>

--- a/Examples/aks-attestation/aks-secret-prov-client-deployment.yaml
+++ b/Examples/aks-attestation/aks-secret-prov-client-deployment.yaml
@@ -22,7 +22,7 @@ spec:
           value: "ra-tls-server-aks-dns.eastus.cloudapp.azure.com:4433"
         resources:
           limits:
-            kubernetes.azure.com/sgx_epc_mem_in_MiB: 10
+            sgx.intel.com/epc: "10Mi"
         volumeMounts:
         - name: var-run-aesmd
           mountPath: /var/run/aesmd
