fixup! Add example to deploy a GSC Python image to AKS cluster
Signed-off-by: aneessahib <anees.a.sahib@intel.com>

--- a/Examples/aks-python-helloworld/gsc-aks-python-deployment.yaml
+++ b/Examples/aks-python-helloworld/gsc-aks-python-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         - name: gsc-aks-python
           image:  <dockerhubusername>/gsc-aks-python
           imagePullPolicy: Always
-          args: ["-c", "print('HelloWorld!')"]
+          args: ["-c", "print('HelloWorld!')"] # WARNING: providing args in the deployment file is insecure!
           resources:
               limits:
                 sgx.intel.com/epc: "10Mi"
