re-structured pytorch example
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/GSC-Image-Curation/pytorch/pytorch.manifest.template
+++ b/GSC-Image-Curation/pytorch/pytorch.manifest.template
@@ -3,6 +3,8 @@ sgx.enclave_size = "8G"
 sgx.thread_num = 128
 loader.pal_internal_mem_size = "128M"
 
+# This is required to run workload as non-root user, any random number works except 1000 which
+# is for root.
 loader.uid=999
 loader.gid=999
 
