Moved make dcap steps to verifier dockerfile
Signed-off-by: Veena Saini <veena.saini@intel.com>

--- a/GSC-Image-Curation/verifier/verifier.dockerfile.template
+++ b/GSC-Image-Curation/verifier/verifier.dockerfile.template
@@ -2,7 +2,9 @@ FROM ubuntu:18.04
 
 RUN apt-get update \
     && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    build-essential \
     curl \
+    git \
     gnupg2 \
     wget
 
@@ -15,8 +17,6 @@ RUN wget https://packages.microsoft.com/ubuntu/18.04/prod/pool/main/a/az-dcap-cl
 
 WORKDIR /ra-tls-secret-prov
 
-COPY gramine/CI-Examples/ra-tls-secret-prov/secret_prov_server_dcap /usr/local/bin
-
 RUN echo 'deb [arch=amd64] https://download.01.org/intel-sgx/sgx_repo/ubuntu bionic main' \
     > /etc/apt/sources.list.d/intel-sgx.list \
     && wget https://download.01.org/intel-sgx/sgx_repo/ubuntu/intel-sgx-deb.key \
@@ -26,5 +26,13 @@ RUN curl -fsSLo /usr/share/keyrings/gramine-keyring.gpg https://packages.gramine
 RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ stable main' | tee /etc/apt/sources.list.d/gramine.list
 RUN apt-get update
 RUN apt-get install -y gramine-dcap
+
+RUN git clone --depth 1 https://github.com/gramineproject/gramine.git
+
+RUN cd gramine/CI-Examples/ra-tls-secret-prov/ \
+    && make clean && make dcap >/dev/null 2>&1 \
+    && cp secret_prov_server_dcap /usr/local/bin
+
+RUN rm -rf gramine >/dev/null 2>&1
 
 ENTRYPOINT ["secret_prov_server_dcap"]
