--- a/GSC-Image-Curation/pytorch/pytorch-gsc.dockerfile.template
+++ b/GSC-Image-Curation/pytorch/pytorch-gsc.dockerfile.template
@@ -1,7 +1,10 @@
+# This template is used by `curation_script.sh` to create a wrapper dockerfile `pytorch-gsc.dockerfile`
+# that includes user provided inputs such as `ca.cert` file and run-time arguments into the graminized PyTorch image.
+
 From
 
 # COPY ca.crt /ca.crt
 
-# These two lines are required in order to incorporate runtime args with the image entrypoint and cmd
+# These two lines are required to incorporate runtime args with the image entrypoint and cmd
 COPY entry_script_pytorch.sh /usr/local/bin/entry_script_pytorch.sh
 ENTRYPOINT ["/bin/bash", "/usr/local/bin/entry_script_pytorch.sh"]
