--- a/GSC-Image-Curation/pytorch/pytorch.manifest.template
+++ b/GSC-Image-Curation/pytorch/pytorch.manifest.template
@@ -1,3 +1,6 @@
+# This file have basic set of values defined for graminizing PyTorch images. This manifest template
+# is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
+
 sgx.nonpie_binary = true
 sgx.enclave_size = "8G"
 sgx.thread_num = 128
@@ -7,5 +10,3 @@ loader.pal_internal_mem_size = "128M"
 # is for root.
 loader.uid=999
 loader.gid=999
-
-# Based on user input the manifest file will automatically be modified after this line
