--- a/GSC-Image-Curation/redis/redis-gsc.dockerfile.template
+++ b/GSC-Image-Curation/redis/redis-gsc.dockerfile.template
@@ -1,3 +1,6 @@
+# This template is used by `curation_script.sh` to create a wrapper dockerfile `redis-gsc.dockerfile`
+# that includes user provided inputs such as `ca.cert` file and run-time arguments into the graminized Redis image.
+
 From
 
 # COPY ca.crt /ca.crt
