--- a/GSC-Image-Curation/redis/redis.manifest.template
+++ b/GSC-Image-Curation/redis/redis.manifest.template
@@ -1,3 +1,6 @@
+# This file have basic set of values defined for graminizing Redis images. This manifest template
+# is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
+
 sgx.nonpie_binary = true
 sgx.enclave_size = "1024M"
 sgx.thread_num = 8
