--- a/Curated-Apps/pytorch/pytorch-gsc.dockerfile.template
+++ b/Curated-Apps/pytorch/pytorch-gsc.dockerfile.template
@@ -1,5 +1,6 @@
-# This template is used by `curation_script.sh` to create a wrapper dockerfile `pytorch-gsc.dockerfile`
-# that includes user provided inputs such as `ca.cert` file and run-time arguments into the graminized PyTorch image.
+# This template is used by `curation_script.sh` to create a wrapper dockerfile
+# `pytorch-gsc.dockerfile` that includes user provided inputs such as `ca.cert`
+# file and run-time arguments into the graminized PyTorch image.
 
 From
 
