--- a/Curated-Apps/redis/redis.manifest.template
+++ b/Curated-Apps/redis/redis.manifest.template
@@ -5,8 +5,8 @@ sgx.nonpie_binary = true
 sgx.enclave_size = "1024M"
 sgx.thread_num = 8
 
-# This is required to run workload as non-root user, any random number less than 1000 works.
-# 1000 is for root.
+# This is required to run workload as non-root user, any random number works except `0`which
+# is for root.
 loader.uid=999
 loader.gid=999
 
