fixup! Add end to end GSC image curation package for better user experience
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/pytorch/pytorch.manifest.template
+++ b/Curated-Apps/pytorch/pytorch.manifest.template
@@ -10,3 +10,5 @@ loader.pal_internal_mem_size = "128M"
 # is for root.
 loader.uid=999
 loader.gid=999
+
+sys.enable_extra_runtime_domain_names_conf = true
