--- a/Curated-Apps/verifier/verifier.dockerfile.template
+++ b/Curated-Apps/verifier/verifier.dockerfile.template
@@ -29,6 +29,12 @@ RUN git clone --depth 1 https://github.com/gramineproject/gramine.git
 # TODO: After release of gramine v1.3, replace master with v1.3 in below line
 RUN cd gramine && git checkout master
 
+ARG server_dcap_pf="n"
+RUN if [ $server_dcap_pf="y" ]; then \
+        sed -i "s|verify_measurements_callback,|NULL,|g" \
+        "gramine/CI-Examples/ra-tls-secret-prov/secret_prov_pf/server.c"; \
+    fi
+
 RUN mkdir -p /ra-tls-secret-prov/secret_prov_minimal
 RUN cd gramine/CI-Examples/ra-tls-secret-prov/ \
     && make clean && make dcap >/dev/null 2>&1 \
