fixup! Add end to end GSC image curation package for better user experience
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/util/config.yaml.template
+++ b/Curated-Apps/util/config.yaml.template
@@ -1,4 +1,5 @@
 # DO NOT CHANGE! BELOW WILL BE REPLACED BY THE CURATION SCRIPT!
+# Currently tested distros are
 # - ubuntu:18.04, ubuntu:20.04, ubuntu:21.04
 # - debian:10, debian:11
 
