fixup! Add end to end GSC image curation package for better user experience
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/pytorch/pytorch-gsc.dockerfile.template
+++ b/Curated-Apps/pytorch/pytorch-gsc.dockerfile.template
@@ -2,6 +2,7 @@
 # `pytorch-gsc.dockerfile` that includes user provided inputs such as `ca.cert`
 # file and run-time arguments into the graminized PyTorch image.
 
+# The curation script fills the base image name after `From` during curation.
 From
 
 # COPY ca.crt /ca.crt
