--- a/Curated-Apps/redis/redis-gsc.dockerfile.template
+++ b/Curated-Apps/redis/redis-gsc.dockerfile.template
@@ -2,6 +2,7 @@
 # `redis-gsc.dockerfile` that includes user provided inputs such as `ca.cert`
 # file and run-time arguments into the graminized Redis image.
 
+# The curation script fills the base image name after `From` during curation.
 From
 
 # COPY ca.crt /ca.crt
