fixup! Add end to end GSC image curation tool
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/workloads/redis/redis-gsc.dockerfile.template
+++ b/Curated-Apps/workloads/redis/redis-gsc.dockerfile.template
@@ -7,6 +7,6 @@ From <base_image_name>
 
 # COPY ca.crt /ca.crt
 
-# These two lines are required to incorporate runtime args with the image entrypoint and cmd
+# These two lines are required to incorporate command-line arguments with the image entrypoint and cmd
 COPY entry_script_redis.sh /usr/local/bin/entry_script_redis.sh
 ENTRYPOINT ["/bin/bash", "/usr/local/bin/entry_script_redis.sh"]
