--- a/Curated-Apps/workloads/redis/redis.manifest.template
+++ b/Curated-Apps/workloads/redis/redis.manifest.template
@@ -1,4 +1,4 @@
-# This file have basic set of values defined for graminizing Redis images. This manifest template
+# This file has basic set of values defined for graminizing Redis images. This manifest template
 # is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
 
 sgx.nonpie_binary = true
