fixup! Add end to end GSC image curation tool
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/util/config.yaml.template
+++ b/Curated-Apps/util/config.yaml.template
@@ -14,7 +14,7 @@ Registry: ""
 # TODO: After release of gramine v1.3, replace commit SHA with v1.3 in below line
 Gramine:
     Repository: "https://github.com/gramineproject/gramine.git"
-    Branch:     "4f259b80ed4c40e7cccde70e822d378754dacb97"
+    Branch:     "v1.3"
 
 # Specify the Intel SGX driver installed on your target machine (more specifically, on the machine
 # where the graminized Docker container will run); Default assumption is DCAP out-of-tree driver,
