Workaround the packaging issue with v1.3
The package `gramine-dcap_1.3-1` has two bugs: a missing dependency on
CJSON and a mispackaging of Secret Prov library. This commit:
- adds CJSON installation explicitly, and
- switches to the bug-free package `gramine_1.3-1`.

Because we switch to the package `gramine_1.3-1` (that expects the SGX
driver under `/dev/sgx/enclave` instead of `/dev/sgx_enclave`), this
commit also changes the `docker run --device=...` mapping.

Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/verifier/verifier.dockerfile.template
+++ b/Curated-Apps/verifier/verifier.dockerfile.template
@@ -6,7 +6,8 @@ RUN apt-get update \
     curl \
     git \
     gnupg2 \
-    wget
+    wget \
+    pkg-config
 
 # Installing Azure DCAP Quote Provider Library (az-dcap-client).
 # Here, the version of az-dcap-client should be in sync with the az-dcap-client
@@ -21,9 +22,11 @@ RUN echo 'deb [arch=amd64] https://download.01.org/intel-sgx/sgx_repo/ubuntu bio
     && apt-key add intel-sgx-deb.key
 
 RUN curl -fsSLo /usr/share/keyrings/gramine-keyring.gpg https://packages.gramineproject.io/gramine-keyring.gpg
-RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ stable main' | tee /etc/apt/sources.list.d/gramine.list
+RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ bionic main' | tee /etc/apt/sources.list.d/gramine.list
 RUN apt-get update
-RUN apt-get install -y gramine-dcap
+RUN apt-get install -y gramine
+RUN wget http://mirrors.kernel.org/ubuntu/pool/universe/c/cjson/libcjson1_1.7.10-1.1_amd64.deb \
+    && dpkg -i libcjson1_1.7.10-1.1_amd64.deb
 
 RUN git clone --depth 1 --branch v1.3 https://github.com/gramineproject/gramine.git
 
