Revert the workaround for the packaging issue with v1.3
The package `gramine-dcap_1.3` had some bugs, so commit aa71356 switched
to package `gramine_1.3` to make Curated Apps work correctly. Now there
is a new package `gramine-dcap_1.3.1` with all packaging bugs fixed, so
switch to it.

Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/verifier/verifier.dockerfile.template
+++ b/Curated-Apps/verifier/verifier.dockerfile.template
@@ -6,8 +6,7 @@ RUN apt-get update \
     curl \
     git \
     gnupg2 \
-    wget \
-    pkg-config
+    wget
 
 # Installing Azure DCAP Quote Provider Library (az-dcap-client).
 # Here, the version of az-dcap-client should be in sync with the az-dcap-client
@@ -24,11 +23,9 @@ RUN echo 'deb [arch=amd64] https://download.01.org/intel-sgx/sgx_repo/ubuntu bio
 RUN curl -fsSLo /usr/share/keyrings/gramine-keyring.gpg https://packages.gramineproject.io/gramine-keyring.gpg
 RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ bionic main' | tee /etc/apt/sources.list.d/gramine.list
 RUN apt-get update
-RUN apt-get install -y gramine
-RUN wget http://mirrors.kernel.org/ubuntu/pool/universe/c/cjson/libcjson1_1.7.10-1.1_amd64.deb \
-    && dpkg -i libcjson1_1.7.10-1.1_amd64.deb
+RUN apt-get install -y gramine-dcap
 
-RUN git clone --depth 1 --branch v1.3 https://github.com/gramineproject/gramine.git
+RUN git clone --depth 1 --branch v1.3.1 https://github.com/gramineproject/gramine.git
 
 ARG server_dcap_pf="n"
 RUN if [ $server_dcap_pf="y" ]; then \
@@ -38,7 +35,7 @@ RUN if [ $server_dcap_pf="y" ]; then \
 
 RUN mkdir -p /ra-tls-secret-prov/secret_prov_minimal
 RUN cd gramine/CI-Examples/ra-tls-secret-prov/ \
-    && make clean && make dcap >/dev/null 2>&1 \
+    && make clean && make dcap \
     && cp secret_prov_minimal/server_dcap /ra-tls-secret-prov/secret_prov_minimal/
 
 RUN rm -rf gramine >/dev/null 2>&1
