fixup! Curate Scikit-learn
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/workloads/sklearn/base_image_helper/Dockerfile
+++ b/Curated-Apps/workloads/sklearn/base_image_helper/Dockerfile
@@ -2,7 +2,4 @@ FROM bitnami/scikit-learn-intel
 
 COPY kmeans.py /app/
 
-ENTRYPOINT ["python3"]
-
-CMD ["kmeans.py"]
-
+ENTRYPOINT ["python3", "kmeans.py"]
