Update AKS attestation example to use Gramine 1.3.1
Signed-off-by: aneessahib <anees.a.sahib@intel.com>

--- a/Examples/aks-attestation/aks-secret-prov-server-deployment.yaml
+++ b/Examples/aks-attestation/aks-secret-prov-server-deployment.yaml
@@ -20,6 +20,18 @@ spec:
         resources:
           limits:
             kubernetes.azure.com/sgx_epc_mem_in_MiB: 10
+        volumeMounts:
+        - name: ssl
+          mountPath: /ra-tls-secret-prov/ssl/
+        env:
+        - name: RA_TLS_ALLOW_DEBUG_ENCLAVE_INSECURE
+          value: "1"
+        - name: RA_TLS_ALLOW_OUTDATED_TCB_INSECURE
+          value: "1"
+      volumes:
+      - name: ssl
+        configMap:
+          name: ssl-certs
 
 # TODO: Requesting an SGX machine is not needed, but Intel DCAP libraries have a bug of trying to
 # open the SGX driver (see https://github.com/intel/linux-sgx/issues/756)
