fixup! Curate Scikit-learn
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/workloads/sklearn/base_image_helper/Dockerfile
+++ b/Curated-Apps/workloads/sklearn/base_image_helper/Dockerfile
@@ -1,5 +1,8 @@
 FROM bitnami/scikit-learn-intel
 
-COPY kmeans.py /app/
+RUN pip3 install pandas
 
-ENTRYPOINT ["python3", "kmeans.py"]
+COPY kmeans_perf_eval.py /app/
+COPY data /app/data
+
+ENTRYPOINT ["python3", "kmeans_perf_eval.py"]
