fixup! Curate Scikit-learn
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/workloads/sklearn/sklearn.manifest.template
+++ b/Curated-Apps/workloads/sklearn/sklearn.manifest.template
@@ -12,6 +12,7 @@ loader.env.OMP_NUM_THREADS = "8"
 loader.uid=999
 loader.gid=999
 
+sys.stack.size = "8M"
 sys.enable_extra_runtime_domain_names_conf = true
 
 fs.mounts = [
