fixup! Curate Scikit-learn
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/workloads/sklearn/sklearn-gsc.dockerfile.template
+++ b/Curated-Apps/workloads/sklearn/sklearn-gsc.dockerfile.template
@@ -3,7 +3,7 @@
 # file and run-time arguments into the graminized Scikit-learn image.
 
 # The curation script fills the <base_image_name> during curation.
-From <base_image_name>
+FROM <base_image_name>
 
 # COPY ca.crt /ca.crt
 
