--- a/Curated-Apps/workloads/sklearn/sklearn.manifest.template
+++ b/Curated-Apps/workloads/sklearn/sklearn.manifest.template
@@ -7,8 +7,7 @@ sgx.thread_num = 128
 loader.pal_internal_mem_size = "128M"
 loader.env.OMP_NUM_THREADS = "8"
 
-# This is required to run workload as non-root user, any random number works except `0` which
-# is for root.
+# This is required to run workload as non-root user, any number works except `0` which is for root.
 loader.uid=999
 loader.gid=999
 
