--- a/Curated-Apps/util/config.yaml.template
+++ b/Curated-Apps/util/config.yaml.template
@@ -24,5 +24,5 @@ Gramine:
 #         Branch:     ""
 #
 SGXDriver:
-    Repository: ""
-    Branch:     ""
+    Repository: "https://github.com/intel/SGXDataCenterAttestationPrimitives.git"
+    Branch:     "DCAP_1.11 && cp -r driver/linux/* ."
