--- a/Curated-Apps/workloads/tensorflow-serving/tensorflow-serving.manifest.template
+++ b/Curated-Apps/workloads/tensorflow-serving/tensorflow-serving.manifest.template
@@ -6,8 +6,7 @@ sgx.enclave_size = "64G"
 sgx.thread_num = 1024
 loader.pal_internal_mem_size = "128M"
 
-# This is required to run workload as non-root user, any random number works except `0` which
-# is for root.
+# This is required to run workload as non-root user, any number works except `0` which is for root.
 loader.uid=999
 loader.gid=999
 
