fixup! Add tensorflow serving curation app example
Signed-off-by: Sonali Saha <sonali.saha@intel.com>

--- a/Curated-Apps/workloads/tensorflow-serving/base_image_helper/Dockerfile
+++ b/Curated-Apps/workloads/tensorflow-serving/base_image_helper/Dockerfile
@@ -1,4 +1,5 @@
-FROM gramine.azurecr.io:443/base_images/intel-tensorflow-ubuntu20.04 
+FROM gramine.azurecr.io:443/base_images/intel-optimized-tensorflow-serving-avx512-ubuntu20.04
 
 COPY models/resnet ./models/resnet
 COPY models/mnist ./models/mnist
+COPY models/half_plus_two ./models/half_plus_two
