--- a/Curated-Apps/workloads/tensorflow-serving/.gitignore
+++ b/Curated-Apps/workloads/tensorflow-serving/.gitignore
@@ -1,4 +1,4 @@
 /*.log
-/entry_script_pytorch.sh
+/entry_script_tensorflow-serving.sh
 /tensorflow-serving-gsc.dockerfile
 /tensorflow-serving.manifest
