--- a/Curated-Apps/workloads/redis/redis.manifest.template
+++ b/Curated-Apps/workloads/redis/redis.manifest.template
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: LGPL-3.0-or-later
+# Copyright (C) 2022 Intel Corporation
+
 # This file has basic set of values defined for graminizing Redis images. This manifest template
 # is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
 
