--- a/Curated-Apps/util/config.yaml.template
+++ b/Curated-Apps/util/config.yaml.template
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: LGPL-3.0-or-later
+# Copyright (C) 2022 Intel Corporation
+
 # DO NOT CHANGE! BELOW WILL BE REPLACED BY THE CURATION SCRIPT!
 # Currently tested distros are
 # - ubuntu:18.04, ubuntu:20.04, ubuntu:21.04
