--- a/Curated-Apps/workloads/pytorch/base_image_helper/Dockerfile
+++ b/Curated-Apps/workloads/pytorch/base_image_helper/Dockerfile
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: LGPL-3.0-or-later
+# Copyright (C) 2022 Intel Corporation
+
 FROM pytorch/pytorch:latest
 COPY input.jpg ./
 COPY classes.txt ./
