--- a/Integrations/azure/akv-sign/Dockerfile.sign.akv.centos.template
+++ b/Integrations/azure/akv-sign/Dockerfile.sign.akv.centos.template
@@ -8,7 +8,7 @@ RUN dnf update -y \
         && dnf install -y \
         curl \
         wget \
-        && /usr/bin/python3 -B -m pip install azure-keyvault-keys azure-identity
+        && /usr/bin/python3 -B -m pip install azure-keyvault-keys azure-identity tomli tomli_w
 
 RUN rpm --import https://packages.microsoft.com/keys/microsoft.asc
 RUN dnf install -y https://packages.microsoft.com/config/rhel/8/packages-microsoft-prod.rpm
@@ -31,4 +31,5 @@ RUN {% block path %}{% endblock %} /gramine/app_files/gramine-sgx-akv-sign \
 FROM {{image}}
 
 COPY --from=unsigned_image /gramine/app_files/*.sig /gramine/app_files/
+COPY --from=unsigned_image /gramine/app_files/*.sgx /gramine/app_files/
 
