--- a/Integrations/azure/akv-sign/Dockerfile.sign.akv.debian.template
+++ b/Integrations/azure/akv-sign/Dockerfile.sign.akv.debian.template
@@ -4,15 +4,13 @@ FROM {{image}} as unsigned_image
 USER root
 
 {% block install %}
-RUN dnf update -y \
-        && dnf install -y \
+RUN apt-get update -y \
+        && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
         curl \
         wget \
-        && /usr/bin/python3 -B -m pip install azure-keyvault-keys azure-identity
+     && /usr/bin/python3 -B -m pip install azure-keyvault-keys azure-identity tomli tomli_w
 
-RUN rpm --import https://packages.microsoft.com/keys/microsoft.asc
-RUN dnf install -y https://packages.microsoft.com/config/rhel/8/packages-microsoft-prod.rpm
-RUN dnf install -y azure-cli
+RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
 {% endblock %}
 
 RUN wget -P /gramine/app_files/ https://raw.githubusercontent.com/gramineproject/contrib/master/Integrations/azure/akv-sign/gramine-sgx-akv-sign
@@ -31,4 +29,5 @@ RUN {% block path %}{% endblock %} /gramine/app_files/gramine-sgx-akv-sign \
 FROM {{image}}
 
 COPY --from=unsigned_image /gramine/app_files/*.sig /gramine/app_files/
+COPY --from=unsigned_image /gramine/app_files/*.sgx /gramine/app_files/
 
