--- a/Integrations/azure/akv-sign/Dockerfile.sign.akv.debian.template
+++ b/Integrations/azure/akv-sign/Dockerfile.sign.akv.debian.template
@@ -1,9 +1,11 @@
+# This Dockerfile template is derived from a generic
+# https://github.com/gramineproject/gsc/blob/master/templates/Dockerfile.common.sign.template
+
 FROM {{image}} as unsigned_image
 
 # Install the required packages using root user
 USER root
 
-{% block install %}
 RUN apt-get update -y \
         && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
         curl \
@@ -11,7 +13,9 @@ RUN apt-get update -y \
      && /usr/bin/python3 -B -m pip install azure-keyvault-keys azure-identity tomli tomli_w
 
 RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-{% endblock %}
+
+# Switch back to original app_image user
+USER {{app_user}}
 
 RUN wget -P /gramine/app_files/ https://raw.githubusercontent.com/gramineproject/contrib/master/Integrations/azure/akv-sign/gramine-sgx-akv-sign
 
@@ -33,4 +37,3 @@ FROM {{image}}
 
 COPY --from=unsigned_image /gramine/app_files/*.sig /gramine/app_files/
 COPY --from=unsigned_image /gramine/app_files/*.sgx /gramine/app_files/
-
