--- a/Curated-Apps/verifier/verifier.dockerfile.template
+++ b/Curated-Apps/verifier/verifier.dockerfile.template
@@ -1,32 +1,36 @@
 # SPDX-License-Identifier: LGPL-3.0-or-later
 # Copyright (C) 2022 Intel Corporation
 
-FROM ubuntu:18.04
+FROM ubuntu:22.04
 
-RUN apt-get update \
+RUN echo "deb http://security.ubuntu.com/ubuntu focal-security main" | tee /etc/apt/sources.list.d/focal-security.list
+
+RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
     && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential \
-    curl \
     git \
-    gnupg2 \
-    wget
+    libssl1.1 \
+    pkg-config
+
+COPY keys/* /usr/share/keyrings/
 
 # Installing Azure DCAP Quote Provider Library (az-dcap-client).
 # Here, the version of az-dcap-client should be in sync with the az-dcap-client
 # version used for quote generation. User can replace the below package with the
 # latest package.
-RUN wget https://packages.microsoft.com/ubuntu/18.04/prod/pool/main/a/az-dcap-client/az-dcap-client_1.10_amd64.deb \
- && dpkg -i az-dcap-client_1.10_amd64.deb
+RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft.asc] https://packages.microsoft.com/ubuntu/20.04/prod focal main" \
+    | tee /etc/apt/sources.list.d/msprod.list
 
-RUN echo 'deb [arch=amd64] https://download.01.org/intel-sgx/sgx_repo/ubuntu bionic main' \
-    > /etc/apt/sources.list.d/intel-sgx.list \
-    && wget https://download.01.org/intel-sgx/sgx_repo/ubuntu/intel-sgx-deb.key \
-    && apt-key add intel-sgx-deb.key
+RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/intel-sgx-deb.asc] https://download.01.org/intel-sgx/sgx_repo/ubuntu jammy main" \
+    | tee /etc/apt/sources.list.d/intel-sgx.list
 
-RUN curl -fsSLo /usr/share/keyrings/gramine-keyring.gpg https://packages.gramineproject.io/gramine-keyring.gpg
-RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ bionic main' | tee /etc/apt/sources.list.d/gramine.list
-RUN apt-get update
-RUN apt-get install -y gramine-dcap
+RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ 1.3 main' \
+    | tee /etc/apt/sources.list.d/gramine.list
+
+RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
+    && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    az-dcap-client \
+    gramine-dcap
 
 RUN git clone --depth 1 --branch v1.3.1 https://github.com/gramineproject/gramine.git
 
