fixup! [Curated-Apps] Add .deb packages instead of `gramine-dcap` in verifier`
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/verifier/verifier.dockerfile.template
+++ b/Curated-Apps/verifier/verifier.dockerfile.template
@@ -8,12 +8,9 @@ RUN echo "deb http://security.ubuntu.com/ubuntu focal-security main" | tee /etc/
 RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
     && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential \
-    curl \
     git \
-    gnupg2 \
     libssl1.1 \
-    pkg-config \
-    wget
+    pkg-config
 
 COPY keys/* /usr/share/keyrings/
 
@@ -23,8 +20,6 @@ COPY keys/* /usr/share/keyrings/
 # latest package.
 RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft.asc] https://packages.microsoft.com/ubuntu/20.04/prod focal main" \
     | tee /etc/apt/sources.list.d/msprod.list
-RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
-    && env DEBIAN_FRONTEND=noninteractive apt-get install -y az-dcap-client
 
 RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/intel-sgx-deb.asc] https://download.01.org/intel-sgx/sgx_repo/ubuntu jammy main" \
     | tee /etc/apt/sources.list.d/intel-sgx.list
@@ -33,7 +28,9 @@ RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] htt
     | tee /etc/apt/sources.list.d/gramine.list
 
 RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
-    && env DEBIAN_FRONTEND=noninteractive apt-get install -y gramine-dcap
+    && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    az-dcap-client \
+    gramine-dcap
 
 RUN git clone --depth 1 --branch v1.3.1 https://github.com/gramineproject/gramine.git
 
