--- a/Curated-Apps/verifier/verifier.dockerfile.template
+++ b/Curated-Apps/verifier/verifier.dockerfile.template
@@ -24,15 +24,15 @@ RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft.asc] https://p
 RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/intel-sgx-deb.asc] https://download.01.org/intel-sgx/sgx_repo/ubuntu jammy main" \
     | tee /etc/apt/sources.list.d/intel-sgx.list
 
-RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ 1.3 main' \
+RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ 1.4 main' \
     | tee /etc/apt/sources.list.d/gramine.list
 
 RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
     && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
     az-dcap-client \
-    gramine-dcap
+    gramine
 
-RUN git clone --depth 1 --branch v1.3.1 https://github.com/gramineproject/gramine.git
+RUN git clone --depth 1 --branch v1.4 https://github.com/gramineproject/gramine.git
 
 ARG server_dcap_pf="n"
 RUN if [ $server_dcap_pf="y" ]; then \
