--- a/Curated-Apps/workloads/redis/redis.manifest.template
+++ b/Curated-Apps/workloads/redis/redis.manifest.template
@@ -6,7 +6,7 @@
 
 sgx.nonpie_binary = true
 sgx.enclave_size = "1024M"
-sgx.thread_num = 8
+sgx.max_threads = 8
 
 # This is required to run workload as non-root user, any number works except `0` which is for root.
 loader.uid=999
