--- a/Curated-Apps/workloads/sklearn/sklearn.manifest.template
+++ b/Curated-Apps/workloads/sklearn/sklearn.manifest.template
@@ -6,7 +6,7 @@
 
 sgx.nonpie_binary = true
 sgx.enclave_size = "16G"
-sgx.thread_num = 128
+sgx.max_threads = 128
 loader.pal_internal_mem_size = "128M"
 
 # Given example is tested on a 72 core machine which produces best results with default value as `8`.
