--- a/Curated-Apps/workloads/pytorch/pytorch.manifest.template
+++ b/Curated-Apps/workloads/pytorch/pytorch.manifest.template
@@ -6,7 +6,7 @@
 
 sgx.nonpie_binary = true
 sgx.enclave_size = "4G"
-sgx.thread_num = 128
+sgx.max_threads = 128
 loader.pal_internal_mem_size = "128M"
 
 # This is required to run workload as non-root user, any number works except `0` which is for root.
