--- a/Curated-Apps/workloads/memcached/memcached.manifest.template
+++ b/Curated-Apps/workloads/memcached/memcached.manifest.template
@@ -4,10 +4,8 @@
 # This file has basic set of values defined for graminizing memcached images. This manifest template
 # is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
 
-sgx.nonpie_binary = true
 sgx.enclave_size = "1024M"
-sgx.thread_num = 16
-loader.pal_internal_mem_size = "128M"
+sgx.max_threads = 16
 
 # This is required to run workload as non-root user, any number works except `0` which is for root.
 loader.uid=999
