--- a/Curated-Apps/workloads/tensorflow-serving/tensorflow-serving.manifest.template
+++ b/Curated-Apps/workloads/tensorflow-serving/tensorflow-serving.manifest.template
@@ -1,8 +1,9 @@
 # SPDX-License-Identifier: LGPL-3.0-or-later
 # Copyright (C) 2023 Intel Corporation
 
-# This file has basic set of values defined for graminizing tensorflow-serving images. This manifest template
-# is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
+# This file has basic set of values defined for graminizing TensorFlow Serving images. This manifest
+# template is used by `curation_script.sh` to create the user manifest file that will be passed to
+# GSC.
 
 sgx.nonpie_binary = true
 sgx.enclave_size = "64G"
