[Curated-Apps] Add MySQL
This commit also slightly improves manifest and Dockerfile templates for
all other Curated-Apps workloads.

Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Curated-Apps/workloads/pytorch/pytorch-gsc.dockerfile.template
+++ b/Curated-Apps/workloads/pytorch/pytorch-gsc.dockerfile.template
@@ -8,4 +8,5 @@
 # The curation script fills the <base_image_name> during curation.
 FROM <base_image_name>
 
-# COPY ca.crt /ca.crt
+# Below line copies cert files into the image if user selects remote attestation
+<copy_cert_files>
