--- a/Curated-Apps/workloads/mysql/mysql.manifest.template
+++ b/Curated-Apps/workloads/mysql/mysql.manifest.template
@@ -1,15 +1,20 @@
 # SPDX-License-Identifier: LGPL-3.0-or-later
-# Copyright (C) 2022 Intel Corporation
+# Copyright (C) 2023 Intel Corporation
 
-# This file has basic set of values defined for graminizing Redis images. This manifest template
+# This file has basic set of values defined for graminizing mysql images. This manifest template
 # is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
 
 sgx.nonpie_binary = true
-sgx.enclave_size = "1024M"
-sgx.max_threads = 8
+sgx.enclave_size = "8G"
+sgx.max_threads = 128
 
 # This is required to run workload as non-root user, any number works except `0` which is for root.
 loader.uid = 999
 loader.gid = 999
 
 sys.enable_extra_runtime_domain_names_conf = true
+
+fs.mounts = [
+  { path = "/var/run/mysqld", uri = "file:/var/run/mysqld", type = "encrypted" },
+  { type = "tmpfs", path = "/tmp" },
+]
