fixup! [Curated-Apps] Add memcached

--- a/Curated-Apps/workloads/memcached/memcached-gsc.dockerfile.template
+++ b/Curated-Apps/workloads/memcached/memcached-gsc.dockerfile.template
@@ -10,6 +10,7 @@ FROM <base_image_name>
 
 # COPY ca.crt /ca.crt
 
-# These two lines are required to incorporate command-line arguments with the image entrypoint and cmd
+# These two lines are required to incorporate command-line args with the image entrypoint and cmd
+# The curation script generates the entry_script_memcached.sh file
 COPY entry_script_memcached.sh /usr/local/bin/entry_script_memcached.sh
 ENTRYPOINT ["/bin/bash", "/usr/local/bin/entry_script_memcached.sh"]
