--- a/Curated-Apps/workloads/memcached/memcached.manifest.template
+++ b/Curated-Apps/workloads/memcached/memcached.manifest.template
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: LGPL-3.0-or-later
 # Copyright (C) 2023 Intel Corporation
 
-# This file has basic set of values defined for graminizing memcached images. This manifest template
+# This file has basic set of values defined for graminizing Memcached images. This manifest template
 # is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
 
 sgx.enclave_size = "1024M"
