fixup! [Curated-Apps] Add memcached
Signed-off-by: Sonali Saha <sonali.saha@intel.com>

--- a/Curated-Apps/workloads/memcached/memcached-gsc.dockerfile.template
+++ b/Curated-Apps/workloads/memcached/memcached-gsc.dockerfile.template
@@ -2,15 +2,10 @@
 # Copyright (C) 2023 Intel Corporation
 
 # This template is used by `curation_script.sh` to create a wrapper dockerfile
-# `memcached-gsc.dockerfile` that includes user provided inputs such as `ca.cert`
-# file and run-time arguments into the graminized memcached image.
+# `memcached-gsc.dockerfile` that includes user provided inputs e.g. `ca.cert`
+# file etc. into the graminized Memcached image.
 
 # The curation script fills the <base_image_name> during curation.
 FROM <base_image_name>
 
 # COPY ca.crt /ca.crt
-
-# These two lines are required to incorporate command-line args with the image entrypoint and cmd
-# The curation script generates the entry_script_memcached.sh file
-COPY entry_script_memcached.sh /usr/local/bin/entry_script_memcached.sh
-ENTRYPOINT ["/bin/bash", "/usr/local/bin/entry_script_memcached.sh"]
