--- a/Curated-Apps/workloads/tensorflow-serving/tensorflow-serving-gsc.dockerfile.template
+++ b/Curated-Apps/workloads/tensorflow-serving/tensorflow-serving-gsc.dockerfile.template
@@ -3,7 +3,7 @@
 
 # This template is used by `curation_script.sh` to create a wrapper dockerfile
 # `tensorflow-serving-gsc.dockerfile` that includes user provided inputs e.g. `ca.cert` file etc.
-# into the graminized Tensorflow-serving image
+# into the graminized TensorFlow Serving image
 
 # The curation script fills the <base_image_name> during curation.
 FROM <base_image_name>
