--- a/Intel-Confidential-Compute-for-X/verifier/verifier.dockerfile.template
+++ b/Intel-Confidential-Compute-for-X/verifier/verifier.dockerfile.template
@@ -10,20 +10,23 @@ RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
     build-essential \
     git \
     libssl1.1 \
+    wget \
     pkg-config
 
-COPY keys/* /usr/share/keyrings/
+#COPY keys/* /usr/share/keyrings/
 
 # Installing Azure DCAP Quote Provider Library (az-dcap-client).
 # Here, the version of az-dcap-client should be in sync with the az-dcap-client
 # version used for quote generation. User can replace the below package with the
 # latest package.
+RUN wget https://packages.microsoft.com/keys/microsoft.asc -O /usr/share/keyrings/microsoft.asc
 RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft.asc] https://packages.microsoft.com/ubuntu/20.04/prod focal main" \
-    | tee /etc/apt/sources.list.d/msprod.list
+    | tee /etc/apt/sources.list.d/msprod.list 
 
-RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/intel-sgx-deb.asc] https://download.01.org/intel-sgx/sgx_repo/ubuntu jammy main" \
-    | tee /etc/apt/sources.list.d/intel-sgx.list
+RUN wget https://download.01.org/intel-sgx/sgx_repo/ubuntu/intel-sgx-deb.key -O /usr/share/keyrings/intel-sgx-deb.key
+RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/intel-sgx-deb.key] https://download.01.org/intel-sgx/sgx_repo/ubuntu focal main' > /etc/apt/sources.list.d/intel-sgx.list
 
+RUN wget https://packages.gramineproject.io/gramine-keyring.gpg -O /usr/share/keyrings/gramine-keyring.gpg
 RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] https://packages.gramineproject.io/ 1.4 main' \
     | tee /etc/apt/sources.list.d/gramine.list
 
