Create AKS Deployment files

--- a/Intel-Confidential-Compute-for-X/workloads/mysql/mysql-gsc.dockerfile.template
+++ b/Intel-Confidential-Compute-for-X/workloads/mysql/mysql-gsc.dockerfile.template
@@ -6,7 +6,8 @@
 # into the graminized MySQL image.
 
 # The curation script fills the <base_image_name> during curation.
-FROM <base_image_name>
+#FROM <base_image_name>
+FROM verifier:latest
 
 # Below line copies cert files into the image if user selects remote attestation
 <copy_cert_files>
