--- a/Intel-Confidential-Compute-for-X/verifier/verifier.dockerfile.template
+++ b/Intel-Confidential-Compute-for-X/verifier/verifier.dockerfile.template
@@ -50,6 +50,8 @@ RUN cd gramine/CI-Examples/ra-tls-secret-prov/ \
 
 RUN rm -rf gramine >/dev/null 2>&1
 
+COPY verifier/ssl/* /ra-tls-secret-prov/ssl/
+
 WORKDIR /ra-tls-secret-prov/secret_prov_minimal
 
 ENTRYPOINT ["./server_dcap"]
