fixup! [Integrations/azure] Add RA-TLS/SecretProv libs for MAA
Signed-off-by: Dmitrii Kuvaiskii <dmitrii.kuvaiskii@intel.com>

--- a/Integrations/azure/ra_tls_maa/subprojects/packagefiles/mbedtls/meson.build
+++ b/Integrations/azure/ra_tls_maa/subprojects/packagefiles/mbedtls/meson.build
@@ -1,4 +1,4 @@
-project('mbedtls', 'c')
+project('mbedtls', 'c', version: '3.4.0')
 
 mbedtls_curl_libs = custom_target('mbedtls_curl',
     command: [
